--- a/apple-clone/css/reset.css
+++ b/apple-clone/css/reset.css
@@ -1,6 +1,6 @@
 html {font-size: 10px;}
-html,body{width:100%;height:100%}
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,form,fieldset,legend,textarea,p,th,td,address,blockquote{margin:0;padding:0}
+html,body{width:100%;height:100%; }
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,form,fieldset,legend,textarea,p,th,td,address,blockquote{margin:0;padding:0;box-sizing: border-box;}
 body {font-family: "Noto Sans KR", "Montserrat", sans-serif;line-height:1;color: #222;font-weight:normal;}
 h1, h2, h3, h4, h5, h6 {margin:0;padding:0;font-weight:normal}
 img,fieldset,iframe{border:0 none;}
@@ -16,7 +16,7 @@ button{border:0;padding:0;margin:0;background:none; cursor:pointer;*overflow:vis
 button::-moz-focus-inner{margin:-1px;padding:0;}
 
 /* HTML5 display-role reset for older browsers */
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;box-sizing: border-box;}
 
 /* for IE haslayout */
 * html div,* html h1,* html h2,* html h3,* html h4,* html h5,* html h6,* html ul,* html ol,* html dl,* html dt,* html dd,* html table,* html th,* html td,* html form,* html fieldset,* html legend{zoom:1}
