--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -92,6 +92,16 @@
     background-color: #000;
 }
 
+#scroll-section-2 .b {
+    top: 10%;
+    left: 40%;
+}
+
+#scroll-section-2 .c {
+    top: 15%;
+    left: 45%;
+}
+
 .mid-message {
     font-size: 2rem;
     color: #888;
@@ -171,6 +181,17 @@
     .desc-message {
         width: 20%;
     }
+
+
+    #scroll-section-2 .b {
+        top: 20%;
+        left: 53%;
+    }
+
+    #scroll-section-2 .c {
+        left: 55%;
+    }
+
     .mid-message {
         font-size: 4vw;
     }
