--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -172,6 +172,16 @@
     left: 50%;
 }
 
+.image-blend-canvas {
+    border: 3px solid #f00;
+}
+
+#scroll-section-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media (min-width :1024px) {
     #scroll-section-0 h1 {
         font-size: 9vw;
