--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -37,6 +37,7 @@
 }
 
 .scroll-section {
+    position: relative;
     padding-top: 50vh;
     border: 5px solid #f00;
 }
@@ -172,14 +173,16 @@
     left: 50%;
 }
 
-.image-blend-canvas {
-    border: 3px solid #f00;
-}
 
 #scroll-section-3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.image-blend-canvas.sticky {
+    position: fixed;
+    top: 0;
 }
 
 @media (min-width :1024px) {
