--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -126,7 +126,7 @@
     padding: 0 1rem;
     text-align: center;
     max-width: 100rem;
-    margin: 0 auto;
+    margin: -8em auto 0;
     line-height: 1.5;
 }
 
@@ -194,6 +194,7 @@
         font-size: 4vw;
     }
     .description {
+        padding: 0;
         font-size: 2rem;
     }
     .description  strong{
@@ -222,9 +223,11 @@
     }
 
     .mid-message {
+        width: 1000px;
         font-size: 4vw;
     }
     .canvas-caption {
+        padding: 0;
         font-size: 2rem;
     }
 }
