--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -194,6 +194,47 @@
     top: 0;
 }
 
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    background-color: #fff;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+@keyframes loading-spin {
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes loading-circle-ani {
+    0% { stroke-dashoffset: 157 }
+    75% { stroke-dashoffset: -147 }
+    100% { stroke-dashoffset: -157 }
+}
+
+
+.loading-circle {
+    width: 54px;
+    height: 54px;
+    animation: loading-spin 3s infinite;
+}
+
+.loading-circle circle {
+    stroke: black;
+    stroke-width: 4;
+    fill: transparent;
+    stroke-dasharray:157;
+    stroke-dashoffset: 0;
+    animation: loading-circle-ani 1s infinite;
+}
+
 @media (min-width :1024px) {
     #scroll-section-0 h1 {
         font-size: 9vw;
