--- a/apple-clone/css/main.css
+++ b/apple-clone/css/main.css
@@ -183,6 +183,10 @@ body.before-load {
     will-change: transform, opacity;
 }
 
+.scroll-effect-end .sticky-elem {
+    display: none !important;
+}
+
 .sticky-elem-canvas {
     top: 0;
     height: 100%;
@@ -253,6 +257,10 @@ body.before-load {
     stroke-dasharray:157;
     stroke-dashoffset: 0;
     animation: loading-circle-ani 1s infinite;
+}
+
+.normal-content {
+    margin-bottom: 10rem;
 }
 
 @media (min-width :1024px) {
